# ElastiHone

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
examples/: elastic_rule.json  sigma_rule.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ActionPanel.jsx  AnalyseModal.jsx  ConfidenceGauge.jsx  FPvsTP.jsx  HitsOverTime.jsx  LogicBuilder.jsx  MetricCard.jsx  RuleSandbox.jsx  Sidebar.jsx
frontend/src/pages/: BehavioralRulesPage.jsx  DashboardPage.jsx  HistoryPage.jsx  ReportPage.jsx  RulesPage.jsx  SettingsPage.jsx
openshift/: deployment.yaml
src/sda/: __init__.py  behavioral_rules.py  bulk.py  cli.py  config.py  db.py  github_rules.py  kibana_client.py
src/sda/agent/: __init__.py  investigation_tools.py  orchestrator.py
src/sda/engine/: differential.py
src/sda/models/: __init__.py  report.py  rule.py  telemetry.py
src/sda/parsers/: __init__.py  elastic_parser.py  kql_translator.py
src/sda/web/: app.py  auth.py  dependencies.py
src/sda/web/routes/: __init__.py  analysis.py  exceptions.py  history.py  pages.py  rules.py  settings_api.py
src/sda/web/static/: style.css
src/sda/web/templates/: base.html  bulk.html  history.html  index.html  metrics.html  report.html  settings.html
tests/: conftest.py  test_agent_tools.py  test_differential.py  test_executor.py  test_parsers.py  test_web.py
